[package]
name = "fracer"
version = "0.1.0"
authors = ["Bluemi <bruno.schilling@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.10"
vulkano-shader-derive = "0.10"
vulkano-win = "0.10"
winit = "0.17"
